# btw

./: .gitignore  LICENSE  LICENSE-DATA.md  README.md
data/: announcements.json  coverage.json  events.json  facilities.json  fleet.csv  summary.json
digest/: 2026-07-14.md
docs/: architecture.md  plan.md  (+4 more)
engine/: README.md  models.yaml  public_evidence.json  pyproject.toml
engine/adapters/: courtlistener.yaml  eia-860m.yaml  epa-echo.yaml  ferc-elibrary.yaml  gas-nominations.yaml  gdelt-news.yaml  iw-sentinel.yaml  mdeq-ensearch.yaml  ohio-epa-air.yaml  opsb-dockets.yaml  shelby-health-air.yaml  tceq-egu.yaml  tceq-psd.yaml
engine/backfill/: genesis_docs.yaml
engine/contracts/: mirror-v1.json
engine/evals/: README.md  genesis_expected.yaml
engine/fixtures/: README.md
engine/schema/: 001_init.sql  002_llm_call.sql  003_candidate.sql  004_source_created_at.sql  005_claim_quorum.sql  006_event_source_url.sql  007_announcement.sql  008_truth_integrity.sql
engine/src/btw_engine/: __init__.py  audit.py  compat.py  digest.py  evalrun.py  extract.py  fetch.py  hotfix.py  island_watch.py  llm.py  normalize.py  notify.py  public_archive.py  publish.py  review.py  truth.py  watch.py
engine/tests/: test_compat.py  test_digest.py  test_extract.py  test_gas_ebb.py  test_m6_adapters.py  test_m6b_adapters.py  test_normalize.py  test_public_archive.py  test_publish.py  test_review.py  test_site_trust.py  test_watchers.py
engine/tests/fixtures/: opsb_case_25-0185.html  tceq_nsr_pending.txt  tceq_nsr_raw.html
engine/tests/sql/: 008_truth_integrity_regression.sql
(+98 files in other folders)
