[project]
name = "btw-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx", "pyyaml", "psycopg[binary]", "boto3",
  "litellm", "pypdf", "rapidfuzz",
]
[project.optional-dependencies]
dev = ["pytest", "playwright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btw_engine"]
